# deskvox

./: .envrc
cmake/: configure_optix.cmake
virvo/tools/: CMakeLists.txt
virvo/tools/entropy/: CMakeLists.txt  entropy.cpp
virvo/virvo/: CMakeLists.txt  vvconfig.h.in  vvfileio.cpp  vvfileio.h  vvoptixrenderer.cpp  vvoptixrenderer.h  vvraycaster.cpp  vvrenderer.h  vvrendererfactory.cpp  vvrendertarget.h  vvscattercaster.cpp  vvscattercaster.cu  vvshaderfactory.cpp  vvsimplecaster.cu  vvsimplecaster.h  vvskipraycaster.cu  vvskipraycaster.h  vvspaceskip.cpp  vvspaceskip.h  vvstats.cpp  vvstats.h  vvvoldesc.cpp  vvvoldesc.h
virvo/virvo/fileio/: CMakeLists.txt  flash.cpp  flash.h
virvo/virvo/gl/: util.cpp
virvo/virvo/math/detail/: math.h
virvo/virvo/optix/: framestate.h  renderer.cu  volume.h
virvo/virvo/rayrend/: CMakeLists.txt
virvo/virvo/rayrend/scatter/: CMakeLists.txt
virvo/virvo/spaceskip/: cudakdtree.cu  cudakdtree.h  kdtree.cpp  kdtree.h  kdtree.inl  lbvh.cu
vox-desk-qt/src/: vvcanvas.cpp  vvmainwindow.cpp  vvprefdialog.cpp
vox-desk/src/: vvdialogs.cpp
